// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal mount 1`] = `
<div class="SharpModal">
	<div id="__BV_modal_outer_mocked">
		<div id="mocked" role="dialog" aria-hidden="true" class="modal fade" style="display: none;">
			<div class="modal-dialog modal-md">
				<div tabindex="-1" role="document" aria-labelledby="__BV_modal_header_mocked" aria-describedby="__BV_modal_body_mocked" class="modal-content">
					<header id="__BV_modal_header_mocked" class="modal-header">
						<div>
							<h5 class="SharpModal__heading">title</h5>
							<button type="button" class="SharpModal__close">
								<svg width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpModal__close-icon">
									<path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path>
								</svg>
							</button>
						</div>
					</header>
					<div id="__BV_modal_body_mocked" class="modal-body"></div>
					<footer id="__BV_modal_footer_mocked" class="modal-footer">
						<button type="button" class="btn btn-primary">ok title</button>
						<button type="button" class="btn btn-secondary">cancel title</button>
					</footer>
				</div>
			</div>
		</div>
		<!---->
	</div>
</div>
`;

exports[`modal mount ok only 1`] = `
<div class="SharpModal">
	<div id="__BV_modal_outer_mocked">
		<div id="mocked" role="dialog" aria-hidden="true" class="modal fade" style="display: none;">
			<div class="modal-dialog modal-md">
				<div tabindex="-1" role="document" aria-labelledby="__BV_modal_header_mocked" aria-describedby="__BV_modal_body_mocked" class="modal-content">
					<header id="__BV_modal_header_mocked" class="modal-header">
						<div>
							<h5 class="SharpModal__heading"></h5>
							<!---->
						</div>
					</header>
					<div id="__BV_modal_body_mocked" class="modal-body"></div>
					<footer id="__BV_modal_footer_mocked" class="modal-footer">
						<button type="button" class="btn btn-primary">{{ modals.ok_button }}</button>
						<!---->
					</footer>
				</div>
			</div>
		</div>
		<!---->
	</div>
</div>
`;

exports[`modal mount visible 1`] = `
<div class="SharpModal">
	<div id="__BV_modal_outer_mocked">
		<div id="mocked" role="dialog" class="modal fade" style="">
			<div class="modal-dialog modal-md">
				<div tabindex="-1" role="document" aria-labelledby="__BV_modal_header_mocked" aria-describedby="__BV_modal_body_mocked" class="modal-content">
					<header id="__BV_modal_header_mocked" class="modal-header">
						<div>
							<h5 class="SharpModal__heading"></h5>
							<button type="button" class="SharpModal__close">
								<svg width="10" height="10" viewBox="0 0 10 10" fill-rule="evenodd" class="SharpModal__close-icon">
									<path d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"></path>
								</svg>
							</button>
						</div>
					</header>
					<div id="__BV_modal_body_mocked" class="modal-body"></div>
					<footer id="__BV_modal_footer_mocked" class="modal-footer">
						<button type="button" class="btn btn-primary">{{ modals.ok_button }}</button>
						<button type="button" class="btn btn-secondary">{{ modals.cancel_button }}</button>
					</footer>
				</div>
			</div>
		</div>
		<div id="__BV_modal_backdrop_mocked" class="modal-backdrop fade"></div>
	</div>
</div>
`;

exports[`modal mount with modifiers classes 1`] = `<div class="SharpModal SharpModal--error"></div>`;
